--- a/Exercise 3/brioso.html
+++ b/Exercise 3/brioso.html
@@ -18,8 +18,6 @@ P{
 <body style="background-color: #CCCCCC;">
 
 <center>
-
-
 <style> {
 font-family: arial, sans-serif;
 border-collapse: collapse;
@@ -59,16 +57,18 @@ padding 8px;
 <h1>Trivias about me!</h1>
 
 <h1 id="Q1">My sports?</h1>
-<button type="button" onclick="document.getElementById('Q1').innerHTML = 'Basketball'">Click to know</button>
+<button type="button" onclick="document.getElementById('Q1').innerHTML = 'Basketball'">Click to know!</button>
 <h1 id="Q2">My Traits?</h1>
-<button type="button" onclick="document.getElementById('Q2').innerHTML = 'OPTIMIST'">Click to know</button>
+<button type="button" onclick="document.getElementById('Q2').innerHTML = 'OPTIMIST'">Click to know!</button>
 <h1 id="Q3">My favorite food?</h1>
-<button type="button" onclick="document.getElementById('Q3').innerHTML = 'Sea foods'">Click to know</button>
+<button type="button" onclick="document.getElementById('Q3').innerHTML = 'Sea foods'">Click to know!</button>
 <h1 id="Q4">What I want to become in future??</h1>
-<button type="button" onclick="document.getElementById('Q4').innerHTML = 'Navy Seal'">Click To Know!</button>
+<button type="button" onclick="document.getElementById('Q4').innerHTML = 'Navy Seal'">Click To know!</button>
 <h1 id="Q5">My motto in life?</h1>
-<button type="button" onclick="document.getElementById('Q5').innerHTML = 'Faith changes evrything!'">Click To Know!</button>
+<button type="button" onclick="document.getElementById('Q5').innerHTML = 'Faith changes evrything!'">Click To know!</button>
+
 <br><br>
+
 </center>
 </table>
 </html>
